--- a/roles/flanneld/tasks/main.yaml
+++ b/roles/flanneld/tasks/main.yaml
@@ -21,6 +21,15 @@
     - flanneld
     - mk-docker-opts.sh
 
+- name: Insert flannel configuration into etcd
+  command: |-
+    {{ etcd_bin_dir }}/etcdctl --ca-file={{ etcd_peer_ca_file }} \
+    --cert-file={{ etcd_peer_cert_file }} --key-file={{ etcd_peer_key_file }} \
+    set {{ flannel_key}}  \
+    '{"Network":"{{ flannel_network}}","SubnetLen":{{ flannel_subnet_len }},"Backend":{"Type":"{{ flannel_backend_type}}"}}' 
+    delegate_to: "{{ groups['etcd'][0] }}"
+    run_once: yes
+
 - name: Create a system unit file
   template:
     src: "{{ role_path }}/templates/flanneld.service"
