Add the kubeconfig configuration item for the node role

--- a/roles/node/tasks/cert.yaml
+++ b/roles/node/tasks/cert.yaml
@@ -9,6 +9,8 @@
     - admin.pem
     - kube-proxy-key.pem
     - kube-proxy.pem
+    - kubelet.pem
+    - kubelet-key.pem
     - kubernetes-key.pem
     - kubernetes.pem
     - ca-key.pem
