--- a/roles/flanneld/templates/flanneld.conf
+++ b/roles/flanneld/templates/flanneld.conf
@@ -1,6 +1,6 @@
 {% macro initial_cluster() -%}
 {% for host in groups[etcd_peer_group] %}
-{{ etcd_peer_url_scheme }}://{{ hostvars[host]['ansible_default_ipv4']['address'] }}:{{ etcd_client_port }}
+{{ etcd_peer_url_scheme }}://{{ host }}:{{ etcd_client_port }}
 {%- if not loop.last -%},{%- endif -%}
 {%- endfor -%}
 {% endmacro -%}
